// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fighter renders with fighter 1`] = `
<Segment>
  <Item>
    <ItemContent>
      <ItemExtra>
        <Header
          floated="left"
        >
          NaN
        </Header>
      </ItemExtra>
      <Styled(ItemHeader)>
        Fighter
      </Styled(ItemHeader)>
      <FighterIcon
        color="red"
        icon="heart outline"
        position={1}
      />
      <FighterIcon
        color="grey"
        icon="shield"
        position={0}
      />
    </ItemContent>
  </Item>
</Segment>
`;

exports[`Fighter renders with no props 1`] = `
<Segment>
  <Item>
    <ItemContent>
      <ItemExtra>
        <Styled(Image)
          floated="left"
          src="placeholderfighter.svg"
        />
      </ItemExtra>
      <Styled(ItemHeader) />
      <FighterIcon
        color="grey"
        icon="heart outline"
        number={null}
        position={1}
      />
      <FighterIcon
        color="grey"
        icon="shield"
        number={null}
        position={0}
      />
    </ItemContent>
  </Item>
</Segment>
`;
